fix top anime card on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -809,8 +809,21 @@ p {
     grid-template-columns: 1fr;
   }
 
-  .homeReleaseCard,
+  .homeReleaseCard {
+    grid-template-columns: 1fr 1fr;
+  }
   .homeRankingItem {
-    grid-template-columns: 1fr;
+    grid-template-columns: 0.5fr 1fr 2fr;
+  }
+  .homeRankingIndex {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  .homeRankingContent{
+    grid-column: 2 / -1;
+  }
+  .homeRankingThumb,
+  .homeRankingTags {
+    grid-column: 1 / -1
   }
 }
